--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <DOCTYPE html>
 <html>
 
-<header>
+<head>
+	<link rel="stylesheet" href="stylesheet.css">
 
-</header>
+</head>
 
 <body>
 
+	<!-- Google Logo -->
+	<img src="google-homepage/google_logo.png" id="logo">
 
 
+	<!-- This is the Google search field -->
+	<form id="search">
+		<input type="text" name="google-search">
+
+	</form>
+
+	<!-- This is the search submit button -->
+	<form action="search_query" class="submit">
+		<input type="submit" value="Google-Suche">
+
+	</form>
+
+	<!-- This is the "Auf gut Glück" button -->
+	<form action="search_query_gut_glueck" class="submit">
+		<input type="submit" value="Auf gut Glück!">
+
+	</form>
 
 
 
