--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="stylesheet.css">
+	<link type="text/css" rel="style" href="style.css" />
+
+	<title> Google Search </title>
 
 </head>
 
 <body>
 
+<h1> This is a Test </h1>
+
 	<!-- Google Logo -->
-	<img src="google-homepage/google_logo.png" id="logo">
+	<img src="google_logo.png" id="logo">
 
 
 	<!-- This is the Google search field -->
